# openfheNVDIA-GPU

./: .gitignore  CMakeLists.txt  README.md  build_and_verify.sh  integrate_all.sh  patch_openfhe.py  run_benchmark.sh  write_engine.py
include/: cuda_hal.h  fhe_compiler.h  global_dag.h  gpu_cluster.h  gpu_keyswitch.h  ntt_vram_cache.h  phantom_registry.h  shadow_registry.h  stream_pool.h  twiddle_gen.h  vram_cache.h  vram_pool.h  vram_pool.h.patch
kernels/: cuda_keyswitch.cu  cuda_math.cu  cuda_ntt.cu  cuda_ntt.cu.bak2
patches/: core-CMakeLists.txt.patched  dcrtpoly-impl.h.patched  dcrtpoly.h.patched
src/: bench_evalmult.cpp  bench_vs_cpu.cpp  benchmark.cpp  benchmark_duality.cpp  cuda_hal.cpp  cuda_hal.cpp.bak_pinned  fhe_compiler.cpp  global_dag.cpp  gpu_engine.cpp  gpu_evalmult_p34.cpp.bak_v7  gpu_keyswitch.cpp  main_gpu_engine.cpp  shadow_registry.h  test_dag.cpp  test_e2e_ckks.cpp  test_e2e_p34.cpp  twiddle_gen.cpp  vram_cache.cpp
